objects/AS_ACH__c.object
<CustomObject>
    <description>ACH data for a Cash Disbursement Payee</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor(Account) associated with this ACH data</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AS_ACHs</relationshipLabel>
        <relationshipName>AS_ACHs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>ON HOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>BankAccountNumber</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankRoutingNumber__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>BankRoutingNumber</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                    <default>true</default>
                    <label>Checking</label>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to this ACH</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AS_ACHs</relationshipLabel>
        <relationshipName>AS_ACHs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionCode__c</fullName>
        <formula>CASE(Bank_Account_Type__c,
&quot;Checking&quot;, &quot;22&quot;,
&quot;Savings&quot;, &quot;32&quot;,
&quot;00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransactionCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Disbursement Payee (Employee/User)</description>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AS_ACHs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AS_ACH</label>
    <nameField>
        <displayFormat>ACH-{00000}</displayFormat>
        <label>AS_ACH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AS_ACHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OnlyOneOfVendorEmployeeContact</fullName>
        <active>true</active>
        <description>Only one of Vendor/Employee/Contact can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(Account__c)) &amp;&amp; (NOT(ISBLANK(User__c)) || NOT(ISBLANK(Contact__c))) || NOT(ISBLANK(User__c)) &amp;&amp; (NOT(ISBLANK(Contact__c)) || NOT(ISBLANK(Account__c))) || NOT(ISBLANK(Contact__c)) &amp;&amp; (NOT(ISBLANK(Account__c)) || NOT(ISBLANK(User__c)))</errorConditionFormula>
        <errorMessage>You can only select one of the following as a payee: Vendor, Employee, Contact</errorMessage>
    </validationRules>
</CustomObject>